changes in section work

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="global.css" />
   <link rel="stylesheet" href="./assets/css/header.css">
   <link rel="stylesheet" href="./assets/css/hero.css">
   <link rel="stylesheet" href="./assets/css/who.css">
@@ -28,10 +28,10 @@
     </div>
     <nav class="menu-header">
       <ul>
-        <li><a href="about">About</a></li>
-        <li><a href="">Work</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="jobs">Jobs</a></li>
+        <li><a href="#abt">About</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#servs">Services</a></li>
+        <li><a href="#jobs">Jobs</a></li>
       </ul>
     </nav>
     <button class="btn-contact">Contact Us</button>
@@ -129,7 +129,7 @@
         </div>
     </section>
 
-    <section class="third-section container">
+    <section class="third-section container" id="servs">
       <div class="box-content">
         <figure class="fit-logo">
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
@@ -179,7 +179,7 @@
       </ul>
     </section>
 
-    <section class="container">
+    <section class="container" id="work">
       <div class="box-content">
         <figure class="fit-logo">
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
@@ -334,7 +334,7 @@
       </div>
     </section>
 
-    <section class="third-section container">
+    <section class="third-section container" id="jobs">
       <div class="job-content">
         <figure class="job-logo-space">
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
@@ -440,10 +440,10 @@
             experiences.</p>
           <nav class="menu-footer">
             <ul>
-              <li><a href="about">About</a></li>
-              <li><a href="">Work</a></li>
-              <li><a href="">Services</a></li>
-              <li><a href="jobs">Jobs</a></li>
+              <li><a href="#abt">About</a></li>
+              <li><a href="#work">Work</a></li>
+              <li><a href="#servs">Services</a></li>
+              <li><a href="#jobs">Jobs</a></li>
             </ul>
           </nav>
           <button class="btn-footer">Home <img src="./assets/img/Path.png" alt=""></button>
