the logo has been adjusted

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </section>
 
-    <section id="abt" class="about  container">
+    <section id="abt" class="about container">
       <div class="box-content">
         <figure class="fit-logo">
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
@@ -127,6 +127,7 @@
           <p class="number-about">28</p>
           <p class="text-branding" style="color: white">Bigest Branding</p>
         </div>
+      </div>
     </section>
 
     <section class="third-section container" id="servs">
