adjusted number and title spacing

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
         </figure>
         <div class="content">
-          <h6 style="color: white;" class="small-title">01. Who We Are</h6>
           <h2 class=" content-title" style="color:white">
+            <h6 style="color: white;" class="small-title"> <span class="number-title">01.</span> Who We Are</h6>
             We Make Designs that Lead and Inpire.
           </h2>
         </div>
@@ -136,7 +136,7 @@
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
         </figure>
         <div class="content">
-          <h6 style="color: #5468e7" class="small-title">02. Who We Are</h6>
+          <h6 style="color: #5468e7" class="small-title"><span class="number-title">02.</span> Who We Are</h6>
           <h2 class=" content-title" style="color: #232340">
             We Make Designs that Lead and Inpire.
           </h2>
@@ -186,7 +186,7 @@
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
         </figure>
         <div class="content">
-          <h6 style="color: #5468e7" class="small-title">03. Famous Projects</h6>
+          <h6 style="color: #5468e7" class="small-title"><span class="number-title">03.</span> Famous Projects</h6>
           <h2 class="title-work">
             Our Partnerships
           </h2>
@@ -341,7 +341,7 @@
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
         </figure>
         <div class="content job-space">
-          <h6 style="color: #5468e7" class="small-title">04. Who We Are</h6>
+          <h6 style="color: #5468e7" class="small-title"><span class="number-title">04.</span> Who We Are</h6>
           <h1 class="content-title jobs-title" style="color: #232340">
             Jobs
           </h1>
